--- a/src/_tpl_forms_form-clear.html
+++ b/src/_tpl_forms_form-clear.html
@@ -139,7 +139,7 @@
 				"taText": "textarea"
 			})
 
-			<label for="form-clear-ta-base">Текстареа js-классов:</label>
+			<label for="form-clear-ta-base">Текстареа без js-классов:</label>
 			<textarea placeholder="Текстареа (placeholder)" id="form-clear-ta-base"></textarea>
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
@@ -365,7 +365,7 @@
 			@@include('_tpl_title-anchor.html', {
 				"taTag": "h4",
 				"taId": "fcColumnizeCustom",
-				"taText": "в два столбца (ie10+) - Z-тип"
+				"taText": "в два столбца (ie10+) - N-тип"
 			})
 			<div class="form-columnize">
 				<label for="form-clear-columnize-01" title="Текстовое поле">Текстовое поле:</label>
@@ -407,7 +407,7 @@
 			@@include('_tpl_title-anchor.html', {
 				"taTag": "h4",
 				"taId": "fcColumnsCustom",
-				"taText": "в два столбца - N-тип"
+				"taText": "в два столбца - Z-тип"
 			})
 			<div class="form-row">
 				<div class="input-wrap">
