--- a/src/_tpl_forms_form-default.html
+++ b/src/_tpl_forms_form-default.html
@@ -87,7 +87,7 @@
 			})
 
 			<div class="input-wrap">
-				<div class="label-holder"><label for="form-cover-ta-base">Текстареа js-классов:</label></div>
+				<div class="label-holder"><label for="form-cover-ta-base">Текстареа без js-классов:</label></div>
 				<div class="input-holder">
 					<textarea placeholder="Текстареа (placeholder)" id="form-cover-ta-base"></textarea>
 					@@include('_tpl_forms_form-validation.html')
@@ -458,7 +458,7 @@
 			@@include('_tpl_title-anchor.html', {
 			"taTag": "h4",
 			"taId": "fdColumnsCustom",
-			"taText": "в два столбца - N-тип"
+			"taText": "в два столбца - Z-тип"
 			})
 			<div class="form-row">
 				<div class="input-wrap">
