--- a/src/forms.html
+++ b/src/forms.html
@@ -364,7 +364,7 @@
 									<div>
 										<div class="layout-text">
 											<h4><a href="#hash-fcTextarea" id="hash-fcTextarea" class="hashAnchor"><span class="mark">textarea</span></a></h4>
-											<label for="form-clear-ta-base">Текстареа js-классов:</label>
+											<label for="form-clear-ta-base">Текстареа без js-классов:</label>
 											<textarea placeholder="Текстареа (placeholder)" id="form-clear-ta-base"></textarea>
 											<div class="error-note">Поле обязательное для заполнения</div>
 											<div class="success-note">Подтверждено</div>
@@ -733,7 +733,7 @@
 									<!--===================================================-->
 									<div>
 										<div class="layout-text">
-											<h4><a href="#hash-fcColumnizeCustom" id="hash-fcColumnizeCustom" class="hashAnchor"><span class="mark">в два столбца (ie10+) - Z-тип</span></a></h4>
+											<h4><a href="#hash-fcColumnizeCustom" id="hash-fcColumnizeCustom" class="hashAnchor"><span class="mark">в два столбца (ie10+) - N-тип</span></a></h4>
 											<div class="form-columnize">
 												<label for="form-clear-columnize-01" title="Текстовое поле">Текстовое поле:</label>
 												<input type="text" placeholder="Текстовое поле" id="form-clear-columnize-01" />
@@ -791,7 +791,7 @@
 									<!--===================================================-->
 									<div>
 										<div class="layout-text">
-											<h4><a href="#hash-fcColumnsCustom" id="hash-fcColumnsCustom" class="hashAnchor"><span class="mark">в два столбца - N-тип</span></a></h4>
+											<h4><a href="#hash-fcColumnsCustom" id="hash-fcColumnsCustom" class="hashAnchor"><span class="mark">в два столбца - Z-тип</span></a></h4>
 											<div class="form-row">
 												<div class="input-wrap">
 													<label for="form-clear-columns-01" title="Текстовое поле">Текстовое поле:</label>
@@ -947,7 +947,7 @@
 										<div class="layout-text">
 											<h4><a href="#hash-fdTextarea" id="hash-fdTextarea" class="hashAnchor"><span class="mark">textarea</span></a></h4>
 											<div class="input-wrap">
-												<div class="label-holder"><label for="form-cover-ta-base">Текстареа js-классов:</label></div>
+												<div class="label-holder"><label for="form-cover-ta-base">Текстареа без js-классов:</label></div>
 												<div class="input-holder">
 													<textarea placeholder="Текстареа (placeholder)" id="form-cover-ta-base"></textarea>
 													<div class="error-note">Поле обязательное для заполнения</div>
@@ -1461,7 +1461,7 @@
 									</div>
 									<div>
 										<div class="layout-text">
-											<h4><a href="#hash-fdColumnsCustom" id="hash-fdColumnsCustom" class="hashAnchor"><span class="mark">в два столбца - N-тип</span></a></h4>
+											<h4><a href="#hash-fdColumnsCustom" id="hash-fdColumnsCustom" class="hashAnchor"><span class="mark">в два столбца - Z-тип</span></a></h4>
 											<div class="form-row">
 												<div class="input-wrap">
 													<div class="label-holder">
