--- a/src/__index.html
+++ b/src/__index.html
@@ -17,7 +17,8 @@
 					<div class="content user-content">
 						<!--breadcrumbs-->
 						@@include('_tpl_breadcrumbs.html', {
-							"last": ""
+							"items": ["Главная"],
+							"last": "Главная"
 						})
 						<!--breadcrumbs end-->
 						<section class="section">
