--- a/src/_tpl_breadcrumbs.html
+++ b/src/_tpl_breadcrumbs.html
@@ -1,7 +1,8 @@
 <div class="breadcrumbs">
 	<ul class="breadcrumbs__list">
-		<li><a href="#"><span title="Главная">Главная</span></a></li>
-		<li><a href="#"><span title="Каталог">Категории</span></a></li>
+		@@for (var i = 0; i < items.length; i++) {
+		<li><a href="#"><span title="`+items[i]+`">`+items[i]+`</span></a></li>
+		}
 		<li><span title="@@if(context.last){@@last}@@if(!context.last){Название раздела}">@@if(context.last){@@last}@@if(!context.last){Название раздела}</span></li>
 	</ul>
 </div>
