--- a/src/index.html
+++ b/src/index.html
@@ -227,8 +227,7 @@
 							<div class="breadcrumbs">
 								<ul class="breadcrumbs__list">
 									<li><a href="#"><span title="Главная">Главная</span></a></li>
-									<li><a href="#"><span title="Каталог">Категории</span></a></li>
-									<li><span title="Название раздела">Название раздела</span></li>
+									<li><span title="Главная">Главная</span></li>
 								</ul>
 							</div>
 							<!--breadcrumbs end-->
