--- a/src/inner.html
+++ b/src/inner.html
@@ -228,7 +228,7 @@
 								<div class="breadcrumbs">
 									<ul class="breadcrumbs__list">
 										<li><a href="#"><span title="Главная">Главная</span></a></li>
-										<li><a href="#"><span title="Каталог">Категории</span></a></li>
+										<li><a href="#"><span title="Новости">Новости</span></a></li>
 										<li><span title="Типографика в вебдизайне. Основные понятия и положения">Типографика в вебдизайне. Основные понятия и положения</span></li>
 									</ul>
 								</div>
