--- a/src/typography.html
+++ b/src/typography.html
@@ -228,7 +228,7 @@
 								<div class="breadcrumbs">
 									<ul class="breadcrumbs__list">
 										<li><a href="#"><span title="Главная">Главная</span></a></li>
-										<li><a href="#"><span title="Каталог">Категории</span></a></li>
+										<li><a href="#"><span title="Новости">Новости</span></a></li>
 										<li><span title="Типографика в вебдизайне. Основные понятия и положения">Типографика в вебдизайне. Основные понятия и положения</span></li>
 									</ul>
 								</div>
@@ -637,11 +637,82 @@
 								<h4><a href="#hash-buttonsWithIcon" id="hash-buttonsWithIcon" class="hashAnchor"><span class="mark">Кнопки с иконкой</span></a></h4>
 								<div class="layout-text">
 									<div style="padding: 0 0 20px;">
+										<a href="#" class="btn-default btn-with-icon">
+											<svg xmlns="http://www.w3.org/2000/svg" width="40" height="16" viewBox="0 0 91.8 37"><path d="M27.5 16H12c-1.1 0-2 0.9-2 2s0.9 2 2 2h15.5c1.1 0 2-0.9 2-2S28.6 16 27.5 16zM27.5 6H2C0.9 6 0 6.9 0 8s0.9 2 2 2h25.5c1.1 0 2-0.9 2-2S28.6 6 27.5 6zM27.5 26H22c-1.1 0-2 0.9-2 2s0.9 2 2 2h5.5c1.1 0 2-0.9 2-2S28.6 26 27.5 26zM44.8 10.1l10.6 8.1 -10.5 7.7c-0.8 0.6-0.9 1.8-0.4 2.6 0.6 0.9 1.8 1.2 2.8 0.6l11.5-8.3 2.7 2.1c0.7 0.6 1.7 0.6 2.5 0l3.2-2.5 10.8 8.4c0.9 0.7 2.1 0.5 2.8-0.4 0.7-0.9 0.5-2.1-0.4-2.8l-10-7.7 10-7.7c0.9-0.7 1-1.9 0.4-2.8 -0.7-0.9-1.9-1-2.8-0.4L62.5 18.7 47.2 6.9c-0.9-0.7-2.1-0.5-2.8 0.4C43.7 8.1 43.9 9.4 44.8 10.1zM87.8 0h-50c-2.2 0-4 1.8-4 4v29c0 2.2 1.8 4 4 4h50c2.2 0 4-1.8 4-4V4C91.8 1.8 90 0 87.8 0zM87.8 33h-50V4h50V33z"></path></svg>
+											<span>Заказать</span>
+										</a>
+									</div>
+									<div style="padding: 0 0 20px;">
 										<button class="btn-default btn-with-icon">
-				<i class="depict-send">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 91.8 37"><path d="M27.5 16H12c-1.1 0-2 0.9-2 2s0.9 2 2 2h15.5c1.1 0 2-0.9 2-2S28.6 16 27.5 16zM27.5 6H2C0.9 6 0 6.9 0 8s0.9 2 2 2h25.5c1.1 0 2-0.9 2-2S28.6 6 27.5 6zM27.5 26H22c-1.1 0-2 0.9-2 2s0.9 2 2 2h5.5c1.1 0 2-0.9 2-2S28.6 26 27.5 26zM44.8 10.1l10.6 8.1 -10.5 7.7c-0.8 0.6-0.9 1.8-0.4 2.6 0.6 0.9 1.8 1.2 2.8 0.6l11.5-8.3 2.7 2.1c0.7 0.6 1.7 0.6 2.5 0l3.2-2.5 10.8 8.4c0.9 0.7 2.1 0.5 2.8-0.4 0.7-0.9 0.5-2.1-0.4-2.8l-10-7.7 10-7.7c0.9-0.7 1-1.9 0.4-2.8 -0.7-0.9-1.9-1-2.8-0.4L62.5 18.7 47.2 6.9c-0.9-0.7-2.1-0.5-2.8 0.4C43.7 8.1 43.9 9.4 44.8 10.1zM87.8 0h-50c-2.2 0-4 1.8-4 4v29c0 2.2 1.8 4 4 4h50c2.2 0 4-1.8 4-4V4C91.8 1.8 90 0 87.8 0zM87.8 33h-50V4h50V33z"></path></svg>
-				</i>
+				<svg xmlns="http://www.w3.org/2000/svg" width="40" height="16" viewBox="0 0 91.8 37"><path d="M27.5 16H12c-1.1 0-2 0.9-2 2s0.9 2 2 2h15.5c1.1 0 2-0.9 2-2S28.6 16 27.5 16zM27.5 6H2C0.9 6 0 6.9 0 8s0.9 2 2 2h25.5c1.1 0 2-0.9 2-2S28.6 6 27.5 6zM27.5 26H22c-1.1 0-2 0.9-2 2s0.9 2 2 2h5.5c1.1 0 2-0.9 2-2S28.6 26 27.5 26zM44.8 10.1l10.6 8.1 -10.5 7.7c-0.8 0.6-0.9 1.8-0.4 2.6 0.6 0.9 1.8 1.2 2.8 0.6l11.5-8.3 2.7 2.1c0.7 0.6 1.7 0.6 2.5 0l3.2-2.5 10.8 8.4c0.9 0.7 2.1 0.5 2.8-0.4 0.7-0.9 0.5-2.1-0.4-2.8l-10-7.7 10-7.7c0.9-0.7 1-1.9 0.4-2.8 -0.7-0.9-1.9-1-2.8-0.4L62.5 18.7 47.2 6.9c-0.9-0.7-2.1-0.5-2.8 0.4C43.7 8.1 43.9 9.4 44.8 10.1zM87.8 0h-50c-2.2 0-4 1.8-4 4v29c0 2.2 1.8 4 4 4h50c2.2 0 4-1.8 4-4V4C91.8 1.8 90 0 87.8 0zM87.8 33h-50V4h50V33z"></path></svg>
 				<span>Отправить</span>
+			</button>
+									</div>
+									<div style="padding: 0 0 20px;">
+										<button class="btn-default btn-with-icon">
+				<span>Send</span>
+				<svg xmlns="http://www.w3.org/2000/svg" width="40" height="16" viewBox="0 0 91.8 37"><path d="M27.5 16H12c-1.1 0-2 0.9-2 2s0.9 2 2 2h15.5c1.1 0 2-0.9 2-2S28.6 16 27.5 16zM27.5 6H2C0.9 6 0 6.9 0 8s0.9 2 2 2h25.5c1.1 0 2-0.9 2-2S28.6 6 27.5 6zM27.5 26H22c-1.1 0-2 0.9-2 2s0.9 2 2 2h5.5c1.1 0 2-0.9 2-2S28.6 26 27.5 26zM44.8 10.1l10.6 8.1 -10.5 7.7c-0.8 0.6-0.9 1.8-0.4 2.6 0.6 0.9 1.8 1.2 2.8 0.6l11.5-8.3 2.7 2.1c0.7 0.6 1.7 0.6 2.5 0l3.2-2.5 10.8 8.4c0.9 0.7 2.1 0.5 2.8-0.4 0.7-0.9 0.5-2.1-0.4-2.8l-10-7.7 10-7.7c0.9-0.7 1-1.9 0.4-2.8 -0.7-0.9-1.9-1-2.8-0.4L62.5 18.7 47.2 6.9c-0.9-0.7-2.1-0.5-2.8 0.4C43.7 8.1 43.9 9.4 44.8 10.1zM87.8 0h-50c-2.2 0-4 1.8-4 4v29c0 2.2 1.8 4 4 4h50c2.2 0 4-1.8 4-4V4C91.8 1.8 90 0 87.8 0zM87.8 33h-50V4h50V33z"></path></svg>
+			</button>
+									</div>
+									<div style="padding: 0 0 20px;">
+										<button class="btn-default btn-with-icon">
+				<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 62 45.2"><path d="M61.6 20.7c-0.8-2.3-3-3.7-5.6-3.7 -11.3 0-22.6 0-33.9 0h-1.1c0.3-0.3 0.5-0.5 0.7-0.6 2.4-2.1 4.8-4.2 7.1-6.3 2.9-2.6 2.9-6.6 0-8.8C28 0.7 27 0.4 26.1 0h-1.8c-1.8 0.4-3.2 1.6-4.6 2.8C14.1 7.8 8.4 12.8 2.7 17.7 1.4 18.8 0.4 20.1 0 21.8v1.6c0.4 1.9 1.7 3.2 3.1 4.5 5.7 4.9 11.3 9.9 17 14.9 1.2 1.1 2.5 2.1 4.2 2.5h1.8c0.7-0.3 1.5-0.5 2.2-0.9 3.1-1.8 3.7-6.1 1.1-8.6 -2.5-2.4-5.1-4.5-7.6-6.8 -0.2-0.2-0.4-0.4-0.7-0.7h1c11.2 0 22.4 0 33.6 0 3.4 0 5.3-1.4 6.3-4.7 0 0 0.1-0.1 0.1-0.1v-1.6C61.9 21.4 61.8 21.1 61.6 20.7z"></path></svg>
+				<span>Вернуться к каталогу</span>
+			</button>
+									</div>
+									<div style="padding: 0 0 20px; width: 250px;">
+										<code>width: 250px</code>
+										<button class="btn-default btn-with-icon">
+				<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 62 45.2"><path d="M61.6 20.7c-0.8-2.3-3-3.7-5.6-3.7 -11.3 0-22.6 0-33.9 0h-1.1c0.3-0.3 0.5-0.5 0.7-0.6 2.4-2.1 4.8-4.2 7.1-6.3 2.9-2.6 2.9-6.6 0-8.8C28 0.7 27 0.4 26.1 0h-1.8c-1.8 0.4-3.2 1.6-4.6 2.8C14.1 7.8 8.4 12.8 2.7 17.7 1.4 18.8 0.4 20.1 0 21.8v1.6c0.4 1.9 1.7 3.2 3.1 4.5 5.7 4.9 11.3 9.9 17 14.9 1.2 1.1 2.5 2.1 4.2 2.5h1.8c0.7-0.3 1.5-0.5 2.2-0.9 3.1-1.8 3.7-6.1 1.1-8.6 -2.5-2.4-5.1-4.5-7.6-6.8 -0.2-0.2-0.4-0.4-0.7-0.7h1c11.2 0 22.4 0 33.6 0 3.4 0 5.3-1.4 6.3-4.7 0 0 0.1-0.1 0.1-0.1v-1.6C61.9 21.4 61.8 21.1 61.6 20.7z"></path></svg>
+				<span>Вернуться на шаг назад</span>
+			</button>
+									</div>
+									<div style="padding: 0 0 20px; width: 250px;">
+										<code>width: 250px</code>
+										<button class="btn-default btn-with-icon">
+				<span>Перейти на шаг вперед</span>
+				<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 62 45.2"><path d="M61.6 20.7c-0.8-2.3-3-3.7-5.6-3.7 -11.3 0-22.6 0-33.9 0h-1.1c0.3-0.3 0.5-0.5 0.7-0.6 2.4-2.1 4.8-4.2 7.1-6.3 2.9-2.6 2.9-6.6 0-8.8C28 0.7 27 0.4 26.1 0h-1.8c-1.8 0.4-3.2 1.6-4.6 2.8C14.1 7.8 8.4 12.8 2.7 17.7 1.4 18.8 0.4 20.1 0 21.8v1.6c0.4 1.9 1.7 3.2 3.1 4.5 5.7 4.9 11.3 9.9 17 14.9 1.2 1.1 2.5 2.1 4.2 2.5h1.8c0.7-0.3 1.5-0.5 2.2-0.9 3.1-1.8 3.7-6.1 1.1-8.6 -2.5-2.4-5.1-4.5-7.6-6.8 -0.2-0.2-0.4-0.4-0.7-0.7h1c11.2 0 22.4 0 33.6 0 3.4 0 5.3-1.4 6.3-4.7 0 0 0.1-0.1 0.1-0.1v-1.6C61.9 21.4 61.8 21.1 61.6 20.7z"></path></svg>
+			</button>
+									</div>
+								</div>
+								<h4><a href="#hash-buttonsWithIconDisabled" id="hash-buttonsWithIconDisabled" class="hashAnchor"><span class="mark">Кнопки с иконкой (неактивные)</span></a></h4>
+								<div class="layout-text">
+									<div style="padding: 0 0 20px;">
+										<a href="#" class="btn-default btn-with-icon disabled">
+											<svg xmlns="http://www.w3.org/2000/svg" width="40" height="16" viewBox="0 0 91.8 37"><path d="M27.5 16H12c-1.1 0-2 0.9-2 2s0.9 2 2 2h15.5c1.1 0 2-0.9 2-2S28.6 16 27.5 16zM27.5 6H2C0.9 6 0 6.9 0 8s0.9 2 2 2h25.5c1.1 0 2-0.9 2-2S28.6 6 27.5 6zM27.5 26H22c-1.1 0-2 0.9-2 2s0.9 2 2 2h5.5c1.1 0 2-0.9 2-2S28.6 26 27.5 26zM44.8 10.1l10.6 8.1 -10.5 7.7c-0.8 0.6-0.9 1.8-0.4 2.6 0.6 0.9 1.8 1.2 2.8 0.6l11.5-8.3 2.7 2.1c0.7 0.6 1.7 0.6 2.5 0l3.2-2.5 10.8 8.4c0.9 0.7 2.1 0.5 2.8-0.4 0.7-0.9 0.5-2.1-0.4-2.8l-10-7.7 10-7.7c0.9-0.7 1-1.9 0.4-2.8 -0.7-0.9-1.9-1-2.8-0.4L62.5 18.7 47.2 6.9c-0.9-0.7-2.1-0.5-2.8 0.4C43.7 8.1 43.9 9.4 44.8 10.1zM87.8 0h-50c-2.2 0-4 1.8-4 4v29c0 2.2 1.8 4 4 4h50c2.2 0 4-1.8 4-4V4C91.8 1.8 90 0 87.8 0zM87.8 33h-50V4h50V33z"></path></svg>
+											<span>Заказать</span>
+										</a>
+									</div>
+									<div style="padding: 0 0 20px;">
+										<button class="btn-default btn-with-icon" disabled>
+				<svg xmlns="http://www.w3.org/2000/svg" width="40" height="16" viewBox="0 0 91.8 37"><path d="M27.5 16H12c-1.1 0-2 0.9-2 2s0.9 2 2 2h15.5c1.1 0 2-0.9 2-2S28.6 16 27.5 16zM27.5 6H2C0.9 6 0 6.9 0 8s0.9 2 2 2h25.5c1.1 0 2-0.9 2-2S28.6 6 27.5 6zM27.5 26H22c-1.1 0-2 0.9-2 2s0.9 2 2 2h5.5c1.1 0 2-0.9 2-2S28.6 26 27.5 26zM44.8 10.1l10.6 8.1 -10.5 7.7c-0.8 0.6-0.9 1.8-0.4 2.6 0.6 0.9 1.8 1.2 2.8 0.6l11.5-8.3 2.7 2.1c0.7 0.6 1.7 0.6 2.5 0l3.2-2.5 10.8 8.4c0.9 0.7 2.1 0.5 2.8-0.4 0.7-0.9 0.5-2.1-0.4-2.8l-10-7.7 10-7.7c0.9-0.7 1-1.9 0.4-2.8 -0.7-0.9-1.9-1-2.8-0.4L62.5 18.7 47.2 6.9c-0.9-0.7-2.1-0.5-2.8 0.4C43.7 8.1 43.9 9.4 44.8 10.1zM87.8 0h-50c-2.2 0-4 1.8-4 4v29c0 2.2 1.8 4 4 4h50c2.2 0 4-1.8 4-4V4C91.8 1.8 90 0 87.8 0zM87.8 33h-50V4h50V33z"></path></svg>
+				<span>Отправить</span>
+			</button>
+									</div>
+									<div style="padding: 0 0 20px;">
+										<button class="btn-default btn-with-icon" disabled>
+				<span>Send</span>
+				<svg xmlns="http://www.w3.org/2000/svg" width="40" height="16" viewBox="0 0 91.8 37"><path d="M27.5 16H12c-1.1 0-2 0.9-2 2s0.9 2 2 2h15.5c1.1 0 2-0.9 2-2S28.6 16 27.5 16zM27.5 6H2C0.9 6 0 6.9 0 8s0.9 2 2 2h25.5c1.1 0 2-0.9 2-2S28.6 6 27.5 6zM27.5 26H22c-1.1 0-2 0.9-2 2s0.9 2 2 2h5.5c1.1 0 2-0.9 2-2S28.6 26 27.5 26zM44.8 10.1l10.6 8.1 -10.5 7.7c-0.8 0.6-0.9 1.8-0.4 2.6 0.6 0.9 1.8 1.2 2.8 0.6l11.5-8.3 2.7 2.1c0.7 0.6 1.7 0.6 2.5 0l3.2-2.5 10.8 8.4c0.9 0.7 2.1 0.5 2.8-0.4 0.7-0.9 0.5-2.1-0.4-2.8l-10-7.7 10-7.7c0.9-0.7 1-1.9 0.4-2.8 -0.7-0.9-1.9-1-2.8-0.4L62.5 18.7 47.2 6.9c-0.9-0.7-2.1-0.5-2.8 0.4C43.7 8.1 43.9 9.4 44.8 10.1zM87.8 0h-50c-2.2 0-4 1.8-4 4v29c0 2.2 1.8 4 4 4h50c2.2 0 4-1.8 4-4V4C91.8 1.8 90 0 87.8 0zM87.8 33h-50V4h50V33z"></path></svg>
+			</button>
+									</div>
+									<div style="padding: 0 0 20px;">
+										<button class="btn-default btn-with-icon" disabled>
+				<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 62 45.2"><path d="M61.6 20.7c-0.8-2.3-3-3.7-5.6-3.7 -11.3 0-22.6 0-33.9 0h-1.1c0.3-0.3 0.5-0.5 0.7-0.6 2.4-2.1 4.8-4.2 7.1-6.3 2.9-2.6 2.9-6.6 0-8.8C28 0.7 27 0.4 26.1 0h-1.8c-1.8 0.4-3.2 1.6-4.6 2.8C14.1 7.8 8.4 12.8 2.7 17.7 1.4 18.8 0.4 20.1 0 21.8v1.6c0.4 1.9 1.7 3.2 3.1 4.5 5.7 4.9 11.3 9.9 17 14.9 1.2 1.1 2.5 2.1 4.2 2.5h1.8c0.7-0.3 1.5-0.5 2.2-0.9 3.1-1.8 3.7-6.1 1.1-8.6 -2.5-2.4-5.1-4.5-7.6-6.8 -0.2-0.2-0.4-0.4-0.7-0.7h1c11.2 0 22.4 0 33.6 0 3.4 0 5.3-1.4 6.3-4.7 0 0 0.1-0.1 0.1-0.1v-1.6C61.9 21.4 61.8 21.1 61.6 20.7z"></path></svg>
+				<span>Вернуться к каталогу</span>
+			</button>
+									</div>
+									<div style="padding: 0 0 20px; width: 250px;">
+										<code>width: 250px</code>
+										<button class="btn-default btn-with-icon" disabled>
+				<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 62 45.2"><path d="M61.6 20.7c-0.8-2.3-3-3.7-5.6-3.7 -11.3 0-22.6 0-33.9 0h-1.1c0.3-0.3 0.5-0.5 0.7-0.6 2.4-2.1 4.8-4.2 7.1-6.3 2.9-2.6 2.9-6.6 0-8.8C28 0.7 27 0.4 26.1 0h-1.8c-1.8 0.4-3.2 1.6-4.6 2.8C14.1 7.8 8.4 12.8 2.7 17.7 1.4 18.8 0.4 20.1 0 21.8v1.6c0.4 1.9 1.7 3.2 3.1 4.5 5.7 4.9 11.3 9.9 17 14.9 1.2 1.1 2.5 2.1 4.2 2.5h1.8c0.7-0.3 1.5-0.5 2.2-0.9 3.1-1.8 3.7-6.1 1.1-8.6 -2.5-2.4-5.1-4.5-7.6-6.8 -0.2-0.2-0.4-0.4-0.7-0.7h1c11.2 0 22.4 0 33.6 0 3.4 0 5.3-1.4 6.3-4.7 0 0 0.1-0.1 0.1-0.1v-1.6C61.9 21.4 61.8 21.1 61.6 20.7z"></path></svg>
+				<span>Вернуться на шаг назад</span>
+			</button>
+									</div>
+									<div style="padding: 0 0 20px; width: 250px;">
+										<code>width: 250px</code>
+										<button class="btn-default btn-with-icon" disabled>
+				<span>Перейти на шаг вперед</span>
+				<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 62 45.2"><path d="M61.6 20.7c-0.8-2.3-3-3.7-5.6-3.7 -11.3 0-22.6 0-33.9 0h-1.1c0.3-0.3 0.5-0.5 0.7-0.6 2.4-2.1 4.8-4.2 7.1-6.3 2.9-2.6 2.9-6.6 0-8.8C28 0.7 27 0.4 26.1 0h-1.8c-1.8 0.4-3.2 1.6-4.6 2.8C14.1 7.8 8.4 12.8 2.7 17.7 1.4 18.8 0.4 20.1 0 21.8v1.6c0.4 1.9 1.7 3.2 3.1 4.5 5.7 4.9 11.3 9.9 17 14.9 1.2 1.1 2.5 2.1 4.2 2.5h1.8c0.7-0.3 1.5-0.5 2.2-0.9 3.1-1.8 3.7-6.1 1.1-8.6 -2.5-2.4-5.1-4.5-7.6-6.8 -0.2-0.2-0.4-0.4-0.7-0.7h1c11.2 0 22.4 0 33.6 0 3.4 0 5.3-1.4 6.3-4.7 0 0 0.1-0.1 0.1-0.1v-1.6C61.9 21.4 61.8 21.1 61.6 20.7z"></path></svg>
 			</button>
 									</div>
 								</div>
@@ -658,6 +729,21 @@
 									</div>
 									<div style="padding: 0 0 20px;">
 										<a href="#" class="btn-default-alt btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
+									</div>
+								</div>
+								<h4><a href="#hash-buttonsWithArrDisabled" id="hash-buttonsWithArrDisabled" class="hashAnchor"><span class="mark">Кнопки со стрелками (неактивные)</span></a></h4>
+								<div class="layout-text">
+									<div style="padding: 0 0 20px;">
+										<a href="#" class="btn-default btn-with-arrow disabled"><span>Смотреть все</span><i>&nbsp;</i></a>
+									</div>
+									<div style="padding: 0 0 20px;">
+										<a href="#" class="btn-default btn-with-arrow disabled"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
+									</div>
+									<div style="padding: 0 0 20px;">
+										<a href="#" class="btn-default-alt btn-with-arrow disabled"><span>Смотреть все</span><i>&nbsp;</i></a>
+									</div>
+									<div style="padding: 0 0 20px;">
+										<a href="#" class="btn-default-alt btn-with-arrow disabled"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
 									</div>
 								</div>
 								<!--style default button end-->
@@ -903,7 +989,43 @@
 								<h3><a href="#hash-visualList" id="hash-visualList" class="hashAnchor"><span class="mark">Изображения + описания к ним</span></a></h3>
 								<!--images descriptions list-->
 								<div class="feature-list">
-									@@loop("_tpl_feature-list-item.html", "includes/feature-list-item.json")
+									<div class="feature-list__item">
+										<div class="feature-list__img">
+											<img src="img/__temp-img-content-carousel-01.jpg" alt="Не используйте причудливые шрифты" />
+										</div>
+										<div class="feature-list__content">
+											<h3>Не используйте причудливые шрифты</h3>
+											<p>Часто текст равняется по ширине. Это значит, что слова в строке расположены соответственно друг другу, и рваного края нет ни с одной стороны.</p>
+										</div>
+									</div>
+									<div class="feature-list__item">
+										<div class="feature-list__img">
+											<img src="img/__temp-img-content-carousel-02.jpg" alt="Забудьте о Comic Sans" />
+										</div>
+										<div class="feature-list__content">
+											<h3>Забудьте о Comic Sans</h3>
+											<p>Такой способ выравнивания модный, так как отзывчивый дизайн научил дизайнеров думать в блоках. Выравнивая текст по ширине, вы получаете непостоянные пробелы и, в худшем случае, в строке оказывается всего несколько слов, что очень раздражает.
+												Проблема с таким текстом усугубляется на мобильных устройствах, и текст становится нечитабельным.</p>
+										</div>
+									</div>
+									<div class="feature-list__item">
+										<div class="feature-list__img">
+											<img src="img/__temp-img-content-carousel-03.jpg" alt="Не избегайте стандартных, дефолтных шрифтов" />
+										</div>
+										<div class="feature-list__content">
+											<h3>Не избегайте стандартных, дефолтных шрифтов</h3>
+											<p>Если опрятность действительно важна для вас, то вам стоит пользоваться знаками переноса, чтобы смягчить рваный край, но никогда не равнять текст по ширине.</p>
+										</div>
+									</div>
+									<div class="feature-list__item">
+										<div class="feature-list__img">
+											<img src="img/__temp-img-content-carousel-04.jpg" alt="Не используйте одновременно больше двух шрифтов" />
+										</div>
+										<div class="feature-list__content">
+											<h3>Не используйте одновременно больше двух шрифтов</h3>
+											<p>В то время как мы хотим подчеркнуть контраст между текстом и фоном, мы также хотим уменьшить контраст между разными уровнями шрифта.</p>
+										</div>
+									</div>
 								</div>
 								<!--images descriptions list end-->
 								<!--feature-list end-->
