--- a/src/__typography.html
+++ b/src/__typography.html
@@ -18,8 +18,9 @@
 
 						<div class="layout-article">
 							<!--breadcrumbs-->
-							@@include('_tpl_typography_components.html', {
-								"component": "breadcrumbs"
+							@@include('_tpl_breadcrumbs.html', {
+								"items": ["Главная", "Новости"],
+								"last": "Типографика в вебдизайне. Основные понятия и положения"
 							})
 							<!--breadcrumbs end-->
 
