--- a/src/_tpl_layout_head.html
+++ b/src/_tpl_layout_head.html
@@ -19,7 +19,9 @@
 	<meta property="og:locale" content="ru_RU">
 	<meta property="og:url" content="http://localhost:3000/index.html">
 	<meta property="og:title" content="Название">
-	<meta property="og:image" content="http://localhost:3000/img/logo.png">
+	<meta property="og:image" content="http://localhost:3000/apple-touch-icon.png">
+	<meta property="og:image:height" content="256">
+	<meta property="og:image:width" content="256">
 	<meta property="og:description" content="Описание">
 	<meta property="og:site_name" content="Расширенное название">
 	<!--Favicon-->
